:bug: Fix modal content scrollbar

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -87,7 +87,8 @@
 }
 
 .modal__body {
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   font-size: 16px;
   margin-bottom: 10px;
   text-align: center;
